# node-stream-processor

./: .clang-format  .eslintrc.json  .gitignore  .gitmodules  CMakeLists.txt  README.md  package-lock.json  package.json  postinstall.js  test.js  tsconfig.json
src/: index.ts  opencl_devices.cc  stream_processor.ts  stream_processor_defaults.ts  stream_processor_wrap.cc  stream_processor_wrap.hpp  utils.ts
tests/: benchmark.ts  stream_processor.test.ts
